fix background on mobile

--- a/src/styles/background.scss
+++ b/src/styles/background.scss
@@ -7,8 +7,9 @@ body {
     top: -5vh;
     left: -5vw;
     background-image: url('../images/background.png');
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
+    background-position: 50% 50%;
     z-index: -10;
   }
 }
